--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,3 @@
-"<div style=border: 3px dashed red>
-<img src=http://bit.ly/1eze8aE>
-</div>"
+<div style='border: 3px dashed red;width:300px;'>
+  <img style='width: 100%;' src='http://bit.ly/1eze8aE'>
+</div>
