--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<h1>My name is <%= ["Amigo", "Oscar", "Viking"].sample %></h1>
+<h1>My name is <%= @name %></h1>
 <div style='border: 3px dashed red;width:300px;'>
   <img style='width: 100%;' src='http://bit.ly/1eze8aE'>
 </div>
